WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316143
font-style: italic does not slant a variable font whose @font-face uses an oblique angle (no 'ital' axis)
https://bugs.webkit.org/show_bug.cgi?id=316143
Summary
font-style: italic does not slant a variable font whose @font-face uses an ob...
Ahmad Saleem
Reported
2026-06-02 16:35:26 PDT
ssia - fixing WPT test case and progressing few test cases here -
https://arrowtype.github.io/vf-slnt-test/
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-02 16:35:33 PDT
<
rdar://problem/178566326
>
Ahmad Saleem
Comment 2
2026-06-02 16:37:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66307
EWS
Comment 3
2026-06-05 19:47:26 PDT
Committed
314681@main
(ff490666c010): <
https://commits.webkit.org/314681@main
> Reviewed commits have been landed. Closing PR #66307 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug